<resources>
    <string name="app_name">ReducePressure</string>

    <!--注册登陆-->
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="logo_r">R</string>
    <string name="logo_educe">educe</string>
    <string name="logo_p">P</string>
    <string name="logo_ressure">ressure</string>
    <string name="login">登陆</string>
    <string name="other_login">第三方登陆</string>
    <string name="register">注册</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>

    <!--进度对话框-->
    <string name="operating">操作中</string>

    <!--behavior-->
    <string name="ScrollingViewBehavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!--侧拉菜单-->
    <string name="user_name">用户名</string>
    <string name="edit_center">用户中心</string>
    <string name="user_feedback">用户反馈</string>

    <!--用户中心-->
    <string name="nick_name">昵称</string>
    <string name="real_name">姓名</string>
    <string name="user_age">年龄</string>
    <string name="user_phone">手机号</string>
    <string name="user_sex">性别</string>
    <string name="user_sex_male">男</string>
    <string name="user_sex_female">女</string>
    <string name="edit_data">修改个人信息</string>
    <string name="edit_password">修改密码</string>
    <string name="edit_old_password">旧密码</string>
    <string name="edit_new_password">新密码</string>
    <string name="edit_new_password_again">再次输入新密码</string>

    <!--常用-->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!--用户反馈-->
    <string name="feedback_content">请输入反馈内容</string>

    <!--权限申请-->
    <string name="permission_text">需要您授权"%1$s"权限</string>
    <string name="permission_success">获取权限成功</string>
    <string name="permission_fail">获取权限失败</string>

</resources>
