<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="10dp">

    <TextView
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_password"
        android:textColor="@color/text_white"
        android:textSize="@dimen/tip_text_size"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tip"
        android:layout_marginTop="@dimen/area_margin_top"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="@dimen/area_margin_top"
        android:orientation="vertical">

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text_under_line"
            android:hint="@string/edit_old_password"
            android:inputType="textPassword"
            android:maxEms="10"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/text_white"
            android:textSize="@dimen/main_text_size"/>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text_under_line"
            android:hint="@string/edit_new_password"
            android:inputType="textPassword"
            android:maxEms="10"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/text_white"
            android:textSize="@dimen/main_text_size"/>

        <EditText
            android:id="@+id/new_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text_under_line"
            android:hint="@string/edit_new_password_again"
            android:inputType="textPassword"
            android:maxEms="3"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/text_white"
            android:textSize="@dimen/main_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/area_margin_top"
            android:gravity="center">

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button_type_one"
                android:contentDescription="@string/app_name"
                android:text="@string/confirm"
                android:textColor="@color/text_white"/>

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@drawable/selector_button_type_one"
                android:contentDescription="@string/app_name"
                android:text="@string/cancel"
                android:textColor="@color/text_white"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>