<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/area_margin_top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-20dp"
            android:layout_marginStart="-20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_r"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/logo_size_big"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/logo_educe"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/logo_size_small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_p"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/logo_size_big"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/logo_ressure"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/logo_size_small"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/area_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/TextInputLayout_Height"
            android:gravity="bottom"
            android:hint="@string/login_phone_hint"
            android:textColorHint="@color/input_text_hint_color">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/input_text_color"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/TextInputLayout_Height"
            android:layout_marginTop="@dimen/TextInputLayout_margin"
            android:gravity="bottom"
            android:hint="@string/login_password_hint"
            android:textColorHint="@color/input_text_hint_color">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/input_text_color"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_area"
        android:layout_marginTop="@dimen/area_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_type_one"
            android:text="@string/login"
            android:textColor="@color/text_white"/>

        <Button
            android:id="@+id/register"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@drawable/selector_button_type_one"
            android:text="@string/register"
            android:textColor="@color/text_white"/>

    </LinearLayout>


    <TextView
        android:id="@+id/other_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/other_login"
        android:textColor="@color/text_black"/>

</RelativeLayout>
