<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="10dp">

    <TextView
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_content"
        android:textColor="@color/text_white"
        android:textSize="@dimen/tip_text_size"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tip"
        android:layout_marginTop="@dimen/area_margin_top"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/user_feedback"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/divider"
        android:drawableBottom="@drawable/selector_edit_text_under_line"
        android:gravity="top"
        android:hint="@string/user_feedback"
        android:inputType="text"
        android:maxEms="100"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/text_white"
        android:textSize="@dimen/main_text_size"/>

    <TextView
        android:id="@+id/words_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/user_feedback"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="-28dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/tip_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_feedback"
        android:gravity="center">

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_type_one"
            android:contentDescription="@string/app_name"
            android:text="@string/confirm"
            android:textColor="@color/text_white"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/selector_button_type_one"
            android:contentDescription="@string/app_name"
            android:text="@string/cancel"
            android:textColor="@color/text_white"/>

    </LinearLayout>

</RelativeLayout>