<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:paddingBottom="@dimen/area_margin_top">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/head_portrait"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_portrait"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/background"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-50dp"
            android:src="@drawable/icon_people"
            app:civ_border_color="@color/colorBackground"
            app:civ_border_width="2dp"/>

        <ImageView
            android:id="@+id/confirm"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/confirm"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/head_portrait"
            android:layout_marginTop="@dimen/area_margin_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/text_black"
                android:textSize="@dimen/main_text_size"/>

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/user_phone"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/main_text_size"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/edit_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/area_margin_top"
        android:background="@drawable/selector_item_area">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/area_margin_top"
            android:text="@string/edit_data"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_info_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text_under_line"
            android:hint="@string/user_name"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"/>

        <EditText
            android:id="@+id/et_user_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text_under_line"
            android:hint="@string/user_sex"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"/>

        <EditText
            android:id="@+id/et_user_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text_under_line"
            android:hint="@string/user_age"
            android:inputType="number"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/area_margin_top"
        android:layout_marginTop="@dimen/area_margin_top"
        android:background="@drawable/selector_item_area">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/area_margin_top"
            android:text="@string/edit_password"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_password_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text_under_line"
            android:hint="@string/edit_old_password"
            android:inputType="textPassword"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"/>

        <EditText
            android:id="@+id/et_user_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text_under_line"
            android:hint="@string/edit_new_password"
            android:inputType="textPassword"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"/>

        <EditText
            android:id="@+id/et_user_password_new_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text_under_line"
            android:hint="@string/edit_new_password_again"
            android:inputType="textPassword"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"/>
    </LinearLayout>


</LinearLayout>