<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:id="@+id/permission_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_text"
        android:textColor="@color/tip_text_color"
        android:textSize="@dimen/tip_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_button_margin"
        android:gravity="end">

        <Button
            android:id="@+id/confirm"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="@dimen/dialog_button_height"
            android:background="@drawable/selector_button_type_one"
            android:text="@string/confirm"
            android:textColor="@color/text_white"
            android:textSize="@dimen/dialog_button_text_size" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="@dimen/dialog_button_height"
            android:layout_marginLeft="@dimen/dialog_button_margin"
            android:layout_marginStart="@dimen/dialog_button_margin"
            android:background="@drawable/selector_button_type_one"
            android:text="@string/cancel"
            android:textColor="@color/text_white"
            android:textSize="@dimen/dialog_button_text_size" />
    </LinearLayout>
</LinearLayout>