<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolBar_height"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="@dimen/title_icon_width"
            android:layout_height="@dimen/title_icon_height"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/title_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/text_white"
            android:textSize="@dimen/title_text_size"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolBar_height"
        android:layout_marginTop="@dimen/area_margin_top"
        android:background="@color/text_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/text_black"
            android:textSize="@dimen/main_text_size"/>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:background="@null"
            android:inputType="phone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolBar_height"
        android:layout_marginTop="@dimen/area_margin_top"
        android:background="@color/text_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/main_text_size"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:background="@null"
            android:inputType="textPassword"
            android:maxEms="10"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolBar_height"
        android:layout_marginTop="@dimen/area_margin_top"
        android:background="@color/text_white"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_button_type_one"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/get_verification_code"
            android:textSize="@dimen/main_text_size"/>

        <TextView
            android:id="@+id/tip"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/get_verification_code"
            android:text="@string/verification_code"
            android:textColor="@color/text_black"
            android:textSize="@dimen/main_text_size"/>

        <EditText
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_toEndOf="@id/tip"
            android:layout_toRightOf="@id/tip"
            android:background="@null"
            android:inputType="number"
            android:maxEms="6"/>

    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/area_margin_top"
        android:background="@drawable/selector_button_type_one"
        android:text="@string/register"
        android:textColor="@color/text_white"
        android:textSize="@dimen/main_text_size"/>

</LinearLayout>
